qtdemux: fix sample leak when processing private qt tags

https://bugzilla.gnome.org/show_bug.cgi?id=696355